Add shape frame for node-full and basic banner; Hide case s teaser category field for taxonomy category full display

--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -138,6 +138,39 @@ $hr-styles: (
 
 /// Brand shapes
 $shapes: (
+  banner: (
+    width: 820px,
+    height: 590px,
+    path: polygon(12% 0, 87% 4%, 100% 61%, 79% 100%, 17% 95%, 0 42%),
+  ),
+  banner-frame: (
+    width: 803px,
+    height: 653px,
+    color: $color-linear-horizontal,
+    path:
+      polygon(
+        evenodd,
+        15% 16%,
+        74% 0,
+        99% 28%,
+        100% 79%,
+        36% 100%,
+        0 62%,
+        calc(0% + 4.5px) calc(62% - 1px),
+        calc(15% + 3px) calc(16% + 4px),
+        calc(74% - 2px) calc(0% + 4px),
+        calc(99% - 4px) calc(28% + 1px),
+        calc(100% - 4px) calc(79% - 4px),
+        calc(36% + 1px) calc(100% - 4px),
+        calc(0% + 4.5px) calc(62% - 1px),
+        0 62%
+      ),
+  ),
+  home-banner: (
+    width: 920px,
+    height: 816px,
+    path: polygon(13% 3%, 89% 0, 100% 41%, 84% 95%, 21% 100%, 0 61%),
+  ),
   footer: (
     width: 1100px,
     height: 431px,
