--- a/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
@@ -7,10 +7,9 @@
     'field_references_limit'
   )
   %}
-  <a class="link--back desktop" href="/toepassingen" >{{ 'Toepassingen'|t }}</a>
   <div class="field-banner">
     <div class="field-text">
-      <a class="link--back mobile" href="/toepassingen" >{{ 'Toepassingen'|t }}</a>
+      <a class="link--back" href="/toepassingen" >{{ 'Toepassingen'|t }}</a>
       <h1 class="heading">{{ term.field_heading.value }}</h1>
 
       <div class="field--name-field-intro">
