COD-5 - Add icons for community menu

--- a/docroot/themes/custom/themekit/partials/component/navigation/community/menu--community.scss
+++ b/docroot/themes/custom/themekit/partials/component/navigation/community/menu--community.scss
@@ -8,18 +8,38 @@
 
     &__item {
       &:not(:last-child) {
-        margin-right: rem-calc(16);
+        margin-right: 16px;
       }
 
       a {
-        display: block;
+        display: inline-flex;
+        align-items: center;
+
+        &::before {
+          margin-right: 7px;
+          width: 29px;
+          height: 24px;
+          background-size: auto 110%;
+          background-position: 50% 0;
+          background-repeat: no-repeat;
+          content: '';
+        }
 
         &[href*="splash"] {
           color: #120b47;
+
+          &::before {
+            background-image: url(../../../../assets/images/svg/logos/splashawards.svg);
+          }
         }
 
         &[href*="drupaljam"] {
           color: $color-black;
+
+          &::before {
+            background-image: url(../../../../assets/images/svg/logos/drupaljam.svg);
+            background-size: auto 150%; // not correct image src provided by a client
+          }
         }
       }
     }
