Set 12 items per page (cases listing); Set 4 items per row (cases listing)

--- a/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
+++ b/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
@@ -150,9 +150,11 @@
         margin-top: 0;
         margin-bottom: 32px;
       }
-
       @include breakpoint(large) {
         @include flex-grid-column(4);
+      }
+      @include breakpoint(xlarge) {
+        @include flex-grid-column(3);
       }
     }
   }
