--- a/docroot/themes/custom/themekit/global/sass/components/_splash.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_splash.scss
@@ -8,29 +8,36 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $color-white;
-  z-index: z(popup);
+  background: $color-gray-300;
+  z-index: z(splash);
 
   display: none;
-
-  &::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
 
   // Logo
   &__logo {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
-    height: 100%;
-    background-color: $color-white;
-  }
+    max-width: 140px;
+    max-height: 90vh;
+    transform: translate3d(-50%, -50%, 0);
 
+    // Logo Overlay
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: $color-gray-300;
+      content: '';
+      animation-duration: 1.5s;
+      animation-name: splashOverlay;
+      animation-delay: 1s;
+      z-index: z(above);
+    }
+  }
 
   // Hide splash for non-support browsers
   html.no-js & {
