COD-28 - Hide back button for case page

--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -29,6 +29,10 @@
     line-height: 1;
     margin-bottom: 12px;
     max-width: 625px;
+
+    &:first-child {
+      margin-top: 40px;
+    }
   }
 
   h4.heading {
