--- a/docroot/themes/custom/themekit/partials/node/type/event/full/node--event--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/event/full/node--event--full.html.twig
@@ -10,7 +10,7 @@
 
   <div class="field-banner">
     <div class="field-text">
-      <a class="link--back" href="/events" >{{ 'Events'|t }}</a>
+{#      <a class="link--back" href="/events" >{{ 'Events'|t }}</a>#}
       <h1 class="heading">{{ node.label }}</h1>
       <div class="field-category">
         {{ content.field_date_range }}
