--- a/docroot/themes/custom/themekit/partials/page/page.html.twig
+++ b/docroot/themes/custom/themekit/partials/page/page.html.twig
@@ -62,6 +62,8 @@
  */
 #}
 
+{{ attach_library('themekit/page') }}
+
 <div class="layout-container">
   {{ page.highlighted }}
   <header role="banner">
