COD-22 - Add frame for evnets featured teaser; Adjust events teaser;

--- a/docroot/themes/custom/themekit/partials/node/type/event/teaser/teaser.scss
+++ b/docroot/themes/custom/themekit/partials/node/type/event/teaser/teaser.scss
@@ -10,6 +10,7 @@
         letter-spacing: 8px;
 
         @include breakpoint(medium up) {
+          min-width: 194px;
           text-align: right;
         }
 
