--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -335,4 +335,30 @@ $shapes: (
         19% 1%,
       ),
   ),
+  featured-event: (
+    width: 100%,
+    height: 100%,
+    color: $color-gray-100,
+    path: polygon(10% 0, 87% 0, 100% 42%, 92% 100%, 10% 99%, 0 38%),
+  ),
+  featured-event-frame: (
+    color: $color-linear-horizontal,
+    path: polygon(
+        evenodd,
+        9% 0,
+        98% 16%,
+        100% 59%,
+        86% 100%,
+        19% 93%,
+        0% 26%,
+        calc(0% + 5px) 26%,
+        calc(9% + 2px) calc(0% + 5px),
+        calc(98% - 4px) calc(16% + 4px),
+        calc(100% - 5px) calc(59% - 1px),
+        calc(86% - 2px) calc(100% - 5px),
+        calc(19% + 3px) calc(93% - 4px),
+        calc(0% + 5px) 26%,
+        0% 26%,
+      ),
+  ),
 );
