--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -29,6 +29,8 @@
     line-height: 1;
     margin-bottom: 12px;
     max-width: 625px;
+    overflow-wrap: break-word;
+    hyphens: auto;
 
     &:first-child {
       margin-top: 40px;
@@ -297,6 +299,8 @@
 
   .node__title {
     @include heading(h4);
+    overflow-wrap: break-word;
+    hyphens: auto;
   }
 
   .node__intro {
@@ -332,18 +336,6 @@
       display: none;
     }
   }
-}
-
-@mixin shape-image($inverse: false) {
-  clip-path: polygon(12% 0, 87% 4%, 100% 61%, 79% 100%, 17% 95%, 0 42%);
-  @if ($inverse == true) {
-    //transform: scaleX(-1);
-    clip-path: polygon(13% 3%, 89% 0, 100% 41%, 84% 95%, 21% 100%, 0 61%);
-  }
-}
-
-@mixin shape-content {
-  clip-path: polygon(11% 2%, 84% 3%, 96% 44%, 88% 100%, 10% 98%, 0 40%);
 }
 
 @mixin banner-image($home-banner: false) {
