--- a/docroot/themes/custom/themekit/partials/node/type/event/featured-teaser/featured-teaser.scss
+++ b/docroot/themes/custom/themekit/partials/node/type/event/featured-teaser/featured-teaser.scss
@@ -1,36 +1,37 @@
 .node--type-event {
   &.node--view-mode-featured-teaser {
+    padding-top: 33px;
+    padding-bottom: 40px;
+
     > .node__content {
       position: relative;
       font-size: rem-calc(16);
       padding: 25px 0;
-
       @include breakpoint(medium up) {
         padding: 35px 120px 40px 97px;
       }
-
-      &:before {
-        @include shape-content;
-
-        content: "";
-        background: $color-gray-100;
-        position: absolute;
+      @include brand-shape(featured-event) {
         left: 0;
         top: 0;
-
-        height: 100%;
-        margin: 0;
-        z-index: 1;
-
-        @include breakpoint(medium) {
-          width: 100%;
-          height: 100%;
-          margin: 0;
-        }
-
         @include breakpoint(small down) {
           width: calc(100% + 300px);
           margin-left: -150px;
+        }
+      }
+      @include brand-shape(featured-event-frame, after) {
+        left: 0;
+        top: -33px;
+        bottom: -40px;
+        @include breakpoint(small down) {
+          width: calc(100% + 336px);
+          margin-left: -156px;
+        }
+        @include breakpoint(medium) {
+          left: -26px;
+          right: 30px;
+        }
+        @include breakpoint(large) {
+          left: -6px;
         }
       }
 
