--- a/docroot/themes/custom/themekit/partials/user/page--user--password.html.twig
+++ b/docroot/themes/custom/themekit/partials/user/page--user--password.html.twig
@@ -4,10 +4,10 @@
     {{ page.highlighted }}
   </div>
   <div class="user-login__content">
+    <a class="link link--back" href="{{ url('<front>') }}">Return to the homepage</a>
     {{ page.content }}
     <ul class="user-login__links">
       <li><a href="{{ path('user.login') }}">Log in to your account</a></li>
-      <li><a href="{{ url('<front>') }}">Return to the homepage</a></li>
     </ul>
   </div>
 </div>
