--- a/docroot/themes/custom/themekit/partials/user/user.scss
+++ b/docroot/themes/custom/themekit/partials/user/user.scss
@@ -5,17 +5,37 @@
 .user-login {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   min-height: 100vh;
+  padding: 32px 16px;
 
   > * {
     max-width: rem-calc(550);
+    margin: 0 auto;
+  }
+
+  .form-text {
+    width: 100%;
+    padding: 12px 16px;
+  }
+
+  .form-submit {
+    @include btn(primary);
+    border: none;
+  }
+
+  .messages {
+    margin-bottom: 12px;
+    margin-left: 8px;
+  }
+
+  .description {
+    color: $color-gray-500;
   }
 }
 
 .user-login__content {
-  padding: rem-calc(24);
+  padding: 24px;
   border: $fieldset-border;
   box-shadow: rgba(black, 0.2) 0 12px 30px -12px;
 }
