--- a/docroot/themes/custom/themekit/global/sass/base/_animation.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_animation.scss
@@ -21,3 +21,24 @@
     clip-path: circle(50% at 50% 0%);
   }
 }
+
+/// Default Shape animations
+@keyframes shapeRotate {
+  0% {
+    transform: rotateY(0deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateY(-15deg) rotateZ(-5deg);
+  }
+}
+
+@keyframes shapeFrameRotate {
+  0% {
+    transform: rotateZ(0deg);
+    background-position: 0% 0%;
+  }
+  100% {
+    transform: rotateZ(3deg);
+    background-position: 100% 100%;
+  }
+}
