--- a/docroot/themes/custom/themekit/global/sass/base/_base.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_base.scss
@@ -4,6 +4,7 @@
  * - 02 - Utilities
  * - 03 - Framework
  * - 04 - Settings
+ * - 05 - Animations
  */
 
 
@@ -49,3 +50,12 @@
 @import "colors";
 @import "settings";
 @import "config";
+
+
+
+
+
+/*------------------------------------*\
+  05 - Animations
+\*------------------------------------*/
+@import "animation";
