COD-3 - Add animation for text component

--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -229,6 +229,7 @@ $shapes: (
     height: 507px,
     color: $color-gray-100,
     path: polygon(18% 0, 94% 7%, 100% 36%, 94% 91%, 16% 100%, 0 58%),
+    animation: 4s linear 1s infinite alternate shapeRotate,
   ),
   text-frame: (
     width: 832px,
@@ -252,12 +253,14 @@ $shapes: (
         calc(20% + 4px) calc(12% + 3px),
         20% 12%,
       ),
+    animation: 4s linear 1s infinite alternate shapeFrameRotate,
   ),
   text-inverse: (
     width: 867px,
     height: 507px,
     color: $color-gray-100,
     path: polygon(6% 6%, 82% 0, 100% 58%, 84% 100%, 6% 91%, 0 36%),
+    animation: 4s linear 1s infinite alternate-reverse shapeRotate,
   ),
   text-inverse-frame: (
     width: 832px,
@@ -281,6 +284,7 @@ $shapes: (
         calc(9% + 4px) calc(1% + 5px),
         9% 1%,
       ),
+    animation: 4s linear 1s infinite alternate-reverse shapeFrameRotate,
   ),
   text-with-media: (
     path: polygon(11% 0, 87% 4%, 100% 61%, 79% 100%, 16% 95%, 0 42%),
